# tfm-marlin

./: .gitignore  Cargo.toml  Makefile  README.md  circuits-bench.sh  curves-bench.sh
benches/: bench.rs  cubic_circuit.rs  dummy_circuit.rs  interceptor.rs  poseidon_circuit.rs
src/: addition_circuit.rs  basic_circuit.rs  circuit_traits.rs  dense_circuit.rs  dummy2_circuit.rs  dummy_circuit.rs  fibonacci2_circuit.rs  fibonacci3_circuit.rs  fibonacci_circuit.rs  main.rs  poseidon_circuit.rs  printers.rs  product_circuit.rs  sum_circuit.rs  sumprod_circuit.rs
